# C

./: README.md
code/Chapter 13/: test0.c
code/Chapter13-文件输入和输出/: CMakeLists.txt  README.md  test0.c
note/: Chapter05-数组和指针.md  Chapter11-字符串和字符串函数.md  Chapter12-存储类别、链接和内存管理.md  Chapter13-文件输入输出.md  Chapter14-结构和其他数据形式.md  QA.md  第18章 静态库和动态库.md  第19章 杂.md  第7章 C控制语句：分支和跳转.md
为什么使用二重指针/: CMakeLists.txt  README.md  doublePointV1.c  doublePointV2.c  getMemoryV1.c  getMemoryV2.c
典型Bug/: CMakeLists.txt  Stack_around_the_variable_XXX_was_corrupted.c
